--- a/almurut_core/templates/base.html
+++ b/almurut_core/templates/base.html
@@ -189,7 +189,7 @@
                                         <li><a href="{% url 'home' %}">Home</a></li>
                                         <li><a href="#">Shop</a></li>
                                         <li><a href="{% url 'faq_page' %}">FAQ</a></li>
-                                        <li><a href="#">My account</a></li>
+                                        <li><a href="{% url 'register_page' %}">My account</a></li>
                                     </ul>
                                 </nav>
                             </div>
